--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -330,7 +330,29 @@
     "\n",
     "\n",
     "# Select version\n",
-    "normalize_input = normalize_input_3"
+    "normalize_input = normalize_input_3\n",
+    "\n",
+    "def normalize_input_3_inline(data, on_progress=print):\n",
+    "    total = data.shape[0]\n",
+    "    \n",
+    "    start_time = datetime.now()\n",
+    "    prev_time = start_time\n",
+    "    \n",
+    "    for dest_idx in range(total):\n",
+    "        curr_time = datetime.now()\n",
+    "        time_spent = curr_time - start_time\n",
+    "        if on_progress is not None and (curr_time - prev_time).total_seconds() > 10:\n",
+    "            rem_seconds = int(total * time_spent.total_seconds() / (dest_idx+1)) - int(time_spent.total_seconds())\n",
+    "            on_progress(\"Processed {} out of {}, remaining {:2}m {:2}s\".format(\n",
+    "                dest_idx+1, total, int(rem_seconds / 60), rem_seconds % 60))\n",
+    "            prev_time = curr_time\n",
+    "            \n",
+    "        data[dest_idx] = skimage.exposure.equalize_adapthist(data[dest_idx])\n",
+    "    \n",
+    "    if on_progress is not None:\n",
+    "        on_progress(\"Done\")\n",
+    "    \n",
+    "normalize_input_inline = normalize_input_3_inline"
    ]
   },
   {
@@ -553,7 +575,7 @@
    },
    "outputs": [],
    "source": [
-    "X_train_extended = normalize_input(X_train_extended)\n",
+    "normalize_input_inline(X_train_extended)\n",
     "image_shape = X_train_extended[0].shape\n",
     "X_test = normalize_input(X_test)\n",
     "X_valid = normalize_input(X_valid)\n",
@@ -571,9 +593,9 @@
    },
    "outputs": [],
    "source": [
-    "training_file = './traffic-signs-data/train_color_extended_equalized.p'\n",
-    "validation_file= './traffic-signs-data/valid_color_extended_equalized.p'\n",
-    "testing_file = './traffic-signs-data/test_color_extended_equalized.p'"
+    "#training_file = './traffic-signs-data/train_color_extended_equalized.p'\n",
+    "#validation_file= './traffic-signs-data/valid_color_extended_equalized.p'\n",
+    "#testing_file = './traffic-signs-data/test_color_extended_equalized.p'"
    ]
   },
   {
@@ -612,14 +634,14 @@
    "source": [
     "# Storing preprocessed images\n",
     "\n",
-    "import pickle\n",
+    "#import pickle\n",
     "\n",
-    "with open(training_file, mode='wb') as f:\n",
-    "    pickle.dump({'features': X_train_extended, 'labels': y_train_extended}, f)\n",
-    "with open(testing_file, mode='wb') as f:\n",
-    "    pickle.dump({'features': X_valid, 'labels': y_valid}, f)\n",
-    "with open(validation_file, mode='wb') as f:\n",
-    "    pickle.dump({'features': X_test, 'labels': y_test}, f)"
+    "#with open(training_file, mode='wb') as f:\n",
+    "#    pickle.dump({'features': X_train_extended, 'labels': y_train_extended}, f)\n",
+    "#with open(testing_file, mode='wb') as f:\n",
+    "#    pickle.dump({'features': X_valid, 'labels': y_valid}, f)\n",
+    "#with open(validation_file, mode='wb') as f:\n",
+    "#    pickle.dump({'features': X_test, 'labels': y_test}, f)"
    ]
   },
   {
@@ -675,7 +697,9 @@
    "source": [
     "#convert_to_tf(X_train_extended, y_train_extended, \"./traffic-signs-data/train_color_equalized.tfrecords\")\n",
     "#convert_to_tf(X_valid, y_valid, \"./traffic-signs-data/valid_color_equalized.tfrecords\")\n",
-    "#convert_to_tf(X_test, y_test, \"./traffic-signs-data/test_color_equalized.tfrecords\")"
+    "#convert_to_tf(X_test, y_test, \"./traffic-signs-data/test_color_equalized.tfrecords\")\n",
+    "\n",
+    "data_directory = '/mnt/data/'"
    ]
   },
   {
@@ -686,12 +710,12 @@
    },
    "outputs": [],
    "source": [
-    "with open(\"./traffic-signs-data/train_color_equalized.npz\", 'wb') as fh:\n",
-    "    np.savez(fh, X_train_extended=X_train_extended, y_train_extended=y_train_extended)\n",
-    "with open(\"./traffic-signs-data/valid_color_equalized.npz\", 'wb') as fh:\n",
-    "    np.savez(fh, X_valid=X_valid, y_valid=y_valid)\n",
-    "with open(\"./traffic-signs-data/test_color_equalized.npz\", 'wb') as fh:\n",
-    "    np.savez(fh, X_test=X_test, y_test=y_test)"
+    "with open(os.path.join(data_directory, \"train_color_equalized.npz\"), 'wb') as fh:\n",
+    "    np.savez(fh, x=X_train_extended, y=y_train_extended)\n",
+    "with open(os.path.join(data_directory, \"valid_color_equalized.npz\"), 'wb') as fh:\n",
+    "    np.savez(fh, x=X_valid, y=y_valid)\n",
+    "with open(os.path.join(data_directory, \"test_color_equalized.npz\"), 'wb') as fh:\n",
+    "    np.savez(fh, x=X_test, y=y_test)"
    ]
   },
   {
@@ -702,19 +726,19 @@
    },
    "outputs": [],
    "source": [
-    "with open(\"./traffic-signs-data/train_color_equalized.npz\", 'rb') as fh:\n",
+    "with open(os.path.join(data_directory, \"train_color_equalized.npz\"), 'rb') as fh:\n",
     "    file = np.load(fh)\n",
-    "    X_train_extended = file['X_train_extended']\n",
-    "    y_train_extended = file['y_train_extended']\n",
-    "with open(\"./traffic-signs-data/valid_color_equalized.npz\", 'rb') as fh:\n",
+    "    X_train_extended = file['x']\n",
+    "    y_train_extended = file['y']\n",
+    "with open(os.path.join(data_directory, \"valid_color_equalized.npz\"), 'rb') as fh:\n",
     "    file = np.load(fh)\n",
-    "    X_valid = file['X_valid']\n",
-    "    y_valid = file['y_valid']\n",
-    "with open(\"./traffic-signs-data/test_color_equalized.npz\", 'rb') as fh:\n",
+    "    X_valid = file['x']\n",
+    "    y_valid = file['y']\n",
+    "with open(os.path.join(data_directory, \"test_color_equalized.npz\"), 'rb') as fh:\n",
     "    np.savez(fh, X_test=X_test, y_test=y_test)\n",
     "    file = np.load(fh)\n",
-    "    X_test = file['X_test']\n",
-    "    y_test = file['y_test']"
+    "    X_test = file['x']\n",
+    "    y_test = file['y']"
    ]
   },
   {
@@ -727,18 +751,18 @@
    "source": [
     "# Loading preprocessed images\n",
     "\n",
-    "import pickle\n",
+    "#import pickle\n",
     "\n",
-    "with open(training_file, mode='rb') as f:\n",
-    "    train = pickle.load(f)\n",
-    "with open(validation_file, mode='rb') as f:\n",
-    "    valid = pickle.load(f)\n",
-    "with open(testing_file, mode='rb') as f:\n",
-    "    test = pickle.load(f)\n",
+    "#with open(training_file, mode='rb') as f:\n",
+    "#    train = pickle.load(f)\n",
+    "#with open(validation_file, mode='rb') as f:\n",
+    "#    valid = pickle.load(f)\n",
+    "#with open(testing_file, mode='rb') as f:\n",
+    "#    test = pickle.load(f)\n",
     "\n",
-    "X_train_extended, y_train_extended = train['features'], train['labels']\n",
-    "X_valid, y_valid = valid['features'], valid['labels']\n",
-    "X_test, y_test = test['features'], test['labels']"
+    "#X_train_extended, y_train_extended = train['features'], train['labels']\n",
+    "#X_valid, y_valid = valid['features'], valid['labels']\n",
+    "#X_test, y_test = test['features'], test['labels']"
    ]
   },
   {
@@ -1071,6 +1095,7 @@
     "            print()\n",
     "\n",
     "            plot_points([train_accuracy_hist, validation_accuracy_hist], ['r', 'b'])\n",
+    "            saver.save(sess, './lenet')\n",
     "            \n",
     "        saver.save(sess, './lenet')\n",
     "        print(\"Model saved\")"
@@ -1415,7 +1440,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
