--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -209,11 +209,11 @@
     "            result[cls] += 1\n",
     "    return result\n",
     "\n",
-    "def group_by_class(x_train, y_train):\n",
+    "def group_by_class(y_train):\n",
     "    \"\"\"Returns {cls: [idx of items in x_train with class cls], ...}\n",
     "    \"\"\"\n",
     "    result = {}\n",
-    "    for idx in range(len(x_train)):\n",
+    "    for idx in range(len(y_train)):\n",
     "        cls = y_train[idx]\n",
     "        result.setdefault(cls, []).append(idx)\n",
     "    return result\n",
@@ -420,7 +420,7 @@
     "\n",
     "\n",
     "def extend_dataset_to_avg(x, y):\n",
-    "    groups_by_class = group_by_class(x, y)\n",
+    "    groups_by_class = group_by_class(y)\n",
     "    avg_counts = int(sum((len(lst) for lst in groups_by_class.values())) / len(groups_by_class))\n",
     "    \n",
     "    print(\"Got avg_counts={}\".format(avg_counts))\n",
@@ -520,6 +520,87 @@
     "\n",
     "    if on_progress is not None:\n",
     "        on_progress(\"Done\")\n",
+    "    return addon_x, addon_y\n",
+    "\n",
+    "\n",
+    "def extend_dataset_to_max(x, y, y_dtype=np.uint8, on_progress=None):\n",
+    "    manglers = [\n",
+    "        #lambda img: skimage.util.random_noise(img, 'gaussian', mean=0.1, var=0.002),\n",
+    "        #lambda img: add_salt_pepper(img, amount=0.008, salt_vs_pepper=0.5),\n",
+    "        (1, lambda img: skimage.transform.rotate(img, np.random.randint(-20, 20))),\n",
+    "        (1, lambda img: skimage.transform.warp(img, skimage.transform.AffineTransform(\n",
+    "            scale=[1.0 + (np.random.random() * 0.2 - 0.1)]*2))),\n",
+    "        (1, lambda img: skimage.transform.warp(\n",
+    "            img, skimage.transform.AffineTransform(translation=np.random.randint(-4, 4)))),\n",
+    "        (4, lambda img: apply_projection_transform(img))\n",
+    "        # Other realistic perturbations would probably also increase robustness such as other affine transformations,\n",
+    "        # brightness, contrast and blur\n",
+    "    ]\n",
+    "\n",
+    "    indices_by_class = group_by_class(y)\n",
+    "    max_by_class = max(len(indices) for indices in indices_by_class.values())\n",
+    "    \n",
+    "    total = max_by_class * len(indices_by_class.keys())\n",
+    "    image_shape = x[0].shape\n",
+    "\n",
+    "    addon_x = np.empty(shape=(total, ) + image_shape, dtype=np.float64)\n",
+    "    addon_y = np.empty(shape=(total, ), dtype=y_dtype)\n",
+    "\n",
+    "    dest_idx = 0\n",
+    "    start_time = datetime.now()\n",
+    "    prev_time = start_time\n",
+    "\n",
+    "    for cls, indices in indices_by_class.items():\n",
+    "        if on_progress is not None:\n",
+    "            on_progress(\"Processing class {} extending {} to {}\".format(cls, len(indices), max_by_class))\n",
+    "\n",
+    "        for img_idx in indices:\n",
+    "            src_image = x[img_idx]\n",
+    "            src_cls = y[img_idx]\n",
+    "            if src_image.dtype.kind != 'f':\n",
+    "                # Hack to accept uint8 and float type images as an input\n",
+    "                src_image = skimage.img_as_float(src_image)\n",
+    "\n",
+    "            addon_x[dest_idx] = src_image\n",
+    "            addon_y[dest_idx] = src_cls\n",
+    "            dest_idx += 1\n",
+    "            \n",
+    "        to_add = max_by_class - len(indices)\n",
+    "        mangler_idx = 0\n",
+    "        img_idx_idx = 0\n",
+    "        while to_add > 0:\n",
+    "            img_idx = indices[img_idx_idx]\n",
+    "            src_image = x[img_idx]\n",
+    "            src_cls = y[img_idx]\n",
+    "\n",
+    "            if src_image.dtype.kind != 'f':\n",
+    "                # Hack to accept uint8 and float type images as an input\n",
+    "                src_image = skimage.img_as_float(src_image)\n",
+    "\n",
+    "            mangler = manglers[mangler_idx][1]\n",
+    "            res = mangler(src_image)\n",
+    "            \n",
+    "            assert res.dtype == addon_x.dtype,\\\n",
+    "                \"Data types must match, got {} and {}\".format(res.dtype, addon_x.dtype)\n",
+    "                \n",
+    "            addon_x[dest_idx] = res\n",
+    "            addon_y[dest_idx] = src_cls\n",
+    "            dest_idx += 1\n",
+    "\n",
+    "            to_add -= 1\n",
+    "            mangler_idx = (mangler_idx + 1) % len(manglers)\n",
+    "            img_idx_idx = (img_idx_idx + 1) % len(indices)\n",
+    "\n",
+    "            curr_time = datetime.now()\n",
+    "            time_spent = curr_time - start_time\n",
+    "            if on_progress is not None and (curr_time - prev_time).total_seconds() > 10:\n",
+    "                rem_seconds = int(total * time_spent.total_seconds() / (dest_idx+1)) - int(time_spent.total_seconds())\n",
+    "                on_progress(\"Processed {} out of {}, remaining {:2}m {:2}s\".format(\n",
+    "                    dest_idx+1, total, int(rem_seconds / 60), rem_seconds % 60))\n",
+    "                prev_time = curr_time\n",
+    "\n",
+    "    if on_progress is not None:\n",
+    "        on_progress(\"Done\")\n",
     "    return addon_x, addon_y"
    ]
   },
@@ -560,7 +641,7 @@
     "EXTEND_DATASET = True\n",
     "\n",
     "if EXTEND_DATASET:\n",
-    "    X_train_extended, y_train_extended = extend_dataset(X_train, y_train, on_progress=print)\n",
+    "    X_train_extended, y_train_extended = extend_dataset_to_max(X_train, y_train, on_progress=print)\n",
     "else:\n",
     "    X_train_extended = X_train\n",
     "    y_train_extended = y_train"
@@ -575,14 +656,24 @@
    },
    "outputs": [],
    "source": [
-    "normalize_input_inline(X_train_extended)\n",
-    "image_shape = X_train_extended[0].shape\n",
-    "X_test = normalize_input(X_test)\n",
-    "X_valid = normalize_input(X_valid)\n",
-    "\n",
-    "#display_random_images(X_train_extended, y_train)\n",
+    "display_random_images(X_train_extended, y_train_extended)\n",
     "    \n",
-    "#plot_counts_by_class(y_train_extended, 'Training examples by class - extended')"
+    "plot_counts_by_class(y_train_extended, 'Training examples by class - extended')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "X_train_normalized = normalize_input(X_train_extended)\n",
+    "X_test_normalized = normalize_input(X_test)\n",
+    "X_valid_normalized = normalize_input(X_valid)\n",
+    "image_shape = X_train_normalized[0].shape"
    ]
   },
   {
@@ -699,7 +790,30 @@
     "#convert_to_tf(X_valid, y_valid, \"./traffic-signs-data/valid_color_equalized.tfrecords\")\n",
     "#convert_to_tf(X_test, y_test, \"./traffic-signs-data/test_color_equalized.tfrecords\")\n",
     "\n",
-    "data_directory = '/mnt/data/'"
+    "train_extended = {'features': X_train_extended, 'labels': y_train_extended}\n",
+    "train_extended_normalized = {'features': X_train_normalized, 'labels': y_train_extended}\n",
+    "valid_normalized = {'features': X_valid_normalized, 'labels': y_valid}\n",
+    "test_normalized = {'features': X_test_normalized, 'labels': y_test}\n",
+    "\n",
+    "data_directory = './data'\n",
+    "\n",
+    "all_datasets = {\n",
+    "    'train_extended': train_extended,\n",
+    "    'train_extended_normalized': train_extended_normalized,\n",
+    "    'valid_normalized': valid_normalized,\n",
+    "    'test_normalized': test_normalized\n",
+    "}\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "def store_dataset(dataset_name, dataset):\n",
+    "    with open(os.path.join(data_directory, dataset_name + '.npz'), 'wb') as fh:\n",
+    "        np.savez(fh, features=dataset['features'], labels=dataset['labels'])\n",
+    "\n",
+    "def load_dataset(dataset_name):\n",
+    "    with open(os.path.join(data_directory, dataset_name + '.npz'), 'rb') as fh:\n",
+    "        file = np.load(fh)\n",
+    "        return {'features': file['features'], 'labels': file['labels']}"
    ]
   },
   {
@@ -710,13 +824,18 @@
    },
    "outputs": [],
    "source": [
-    "with open(os.path.join(data_directory, \"train_color_equalized.npz\"), 'wb') as fh:\n",
-    "    np.savez(fh, x=X_train_extended, y=y_train_extended)\n",
-    "with open(os.path.join(data_directory, \"valid_color_equalized.npz\"), 'wb') as fh:\n",
-    "    np.savez(fh, x=X_valid, y=y_valid)\n",
-    "with open(os.path.join(data_directory, \"test_color_equalized.npz\"), 'wb') as fh:\n",
-    "    np.savez(fh, x=X_test, y=y_test)"
+    "for dataset_name in all_datasets:\n",
+    "    store_dataset(dataset_name, all_datasets[dataset_name])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -726,19 +845,17 @@
    },
    "outputs": [],
    "source": [
-    "with open(os.path.join(data_directory, \"train_color_equalized.npz\"), 'rb') as fh:\n",
-    "    file = np.load(fh)\n",
-    "    X_train_extended = file['x']\n",
-    "    y_train_extended = file['y']\n",
-    "with open(os.path.join(data_directory, \"valid_color_equalized.npz\"), 'rb') as fh:\n",
-    "    file = np.load(fh)\n",
-    "    X_valid = file['x']\n",
-    "    y_valid = file['y']\n",
-    "with open(os.path.join(data_directory, \"test_color_equalized.npz\"), 'rb') as fh:\n",
-    "    np.savez(fh, X_test=X_test, y_test=y_test)\n",
-    "    file = np.load(fh)\n",
-    "    X_test = file['x']\n",
-    "    y_test = file['y']"
+    "dataset = load_dataset('train_extended_normalized')\n",
+    "X_train_extended, y_train_extended = dataset['features'], dataset['labels']\n",
+    "\n",
+    "image_shape = X_train_extended[0].shape\n",
+    "n_classes = len(set(y_train_extended))\n",
+    "\n",
+    "dataset = load_dataset('valid_normalized')\n",
+    "X_valid, y_valid = dataset['features'], dataset['labels']\n",
+    "\n",
+    "dataset = load_dataset('test_normalized')\n",
+    "X_test, y_test = dataset['features'], dataset['labels']"
    ]
   },
   {
@@ -1440,11 +1557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
-  },
-  "widgets": {
-   "state": {},
-   "version": "1.1.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
